fixed issue with footer on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -179,7 +179,7 @@ body.loggedin {
 }
 
 body {
-    .making {
+    .makingPage {
         color: $black;
         padding-bottom: 25px;
         padding-left: 0px;
